Feat: 로그인 페이지 css, js 적용

--- a/home/src/main/resources/static/user/login.html
+++ b/home/src/main/resources/static/user/login.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>로그인</title>
-    <link rel="stylesheet" href="/path/to/bootstrap.css" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -35,6 +36,12 @@
         </form>
     </div>
 </div>
+
+<!-- External Libraries -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
 <script>
     document.querySelector("#btn-login").addEventListener("click", async function() {
