--- a/home/src/main/resources/static/index.html
+++ b/home/src/main/resources/static/index.html
@@ -92,42 +92,9 @@
 	<div id="top-right-buttons">
     	<button class="btn btn-custom info-btn" id="info-btn" onclick="location.href='/board'">게시판</button>
     	<div id="auth-buttons">
-        	<!-- 자바스크립트로 버튼을 관리합니다 -->
+        	<!-- JavaScript에서 인증 상태에 따라 버튼을 동적으로 추가 -->
     	</div>
 	</div>
-
-	<!-- Login Modal -->
-	<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="loginModalLabel">로그인</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form id="form-login" method="POST" action="/user/login">
-                        <div class="form-check mb-3 float-end">
-                            <input class="form-check-input" type="checkbox" value="ok" id="saveid" name="saveid" />
-                            <label class="form-check-label" for="saveid">아이디 저장</label>
-                        </div>
-                        <div class="mb-3">
-                            <label for="userid" class="form-label">아이디:</label>
-                            <input type="text" class="form-control" id="userid" name="userid" placeholder="아이디..." />
-                        </div>
-                        <div class="mb-3">
-                            <label for="userpwd" class="form-label">비밀번호:</label>
-                            <input type="password" class="form-control" id="userpwd" name="userpwd" placeholder="비밀번호..." />
-                        </div>
-                        <div class="text-center">
-                            <button type="button" id="btn-login" class="btn btn-primary mb-3" onclick="login()">로그인</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 
 	<!-- External Libraries -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -142,93 +109,87 @@
 	<script src="/js/user.js"></script>
 
 	<script>
-	document.addEventListener("DOMContentLoaded", function() {
-	    // REST API를 통해 사용자 인증 상태를 가져옴
-	    fetch("/user/status", {
-	        method: "GET",
-	        credentials: "include"
-	    })
-	    .then(response => response.json())
-	    .then(data => {
-	        const authButtons = document.getElementById("auth-buttons");
-	        if (data.authenticated) {
-	            // 사용자가 로그인된 경우
-	            authButtons.innerHTML = `
-	                <button class="btn" id="profile-btn" onclick="location.href='/user/infoPage'">회원정보</button>
-	                <button class="btn" id="logout-btn" onclick="logout()">로그아웃</button>
-	            `;
-	        } else {
-	            // 사용자가 로그인되지 않은 경우
-	            authButtons.innerHTML = `
-	                <button class="btn btn-custom" id="login-btn" onclick="openLoginPage()">로그인</button>
-	                <button class="btn btn-custom" id="signup-btn" onclick="location.href='/user/joinPage'">회원가입</button>
-	            `;
-	        }
-	    })
-	    .catch(error => console.error("사용자 상태 조회 오류:", error));
-	});
+document.addEventListener("DOMContentLoaded", function() {
+    // 로컬 스토리지에서 JWT 토큰 가져오기
+    const token = localStorage.getItem("jwtToken");
 
-	function openLoginPage() {
-	    fetch("/user/loginPage", {
-	        method: "GET"
-	    })
-	    .then(response => {
-	        if (response.ok) {
-	            window.location.href = "/user/login.html";
-	        } else {
-	            console.error("Login page request failed:", response.status);
-	            alert("로그인 페이지 로드 실패");
-	        }
-	    })
-	    .catch(error => console.error("Error fetching login page:", error));
-	}
+    // JWT 토큰이 있으면 인증 상태 확인
+    if (token) {
+        fetch("/user/status", {
+            method: "GET",
+            headers: {
+                "Authorization": `Bearer ${token}`
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            const authButtons = document.getElementById("auth-buttons");
+            if (data.authenticated) {
+                // 로그인된 상태의 버튼
+                authButtons.innerHTML = `
+                    <button class="btn" id="profile-btn" onclick="location.href='/user/infoPage'">회원정보</button>
+                    <button class="btn" id="logout-btn" onclick="logout()">로그아웃</button>
+                `;
+            } else {
+                // 로그인이 안 된 상태의 버튼
+                showLoginButtons(authButtons);
+            }
+        })
+        .catch(error => {
+            console.error("사용자 상태 조회 오류:", error);
+            showLoginButtons(document.getElementById("auth-buttons"));
+        });
+    } else {
+        // JWT 토큰이 없으면 로그인되지 않은 상태로 표시
+        showLoginButtons(document.getElementById("auth-buttons"));
+    }
+});
 
-	function logout() {
-	    fetch("/api/user/logout", {
-	        method: "POST",
-	        credentials: "include"
-	    })
-	    .then(response => {
-	        if (response.ok) {
-	            location.reload(); // 로그아웃 후 페이지 새로고침
-	        } else {
-	            console.error("로그아웃 실패");
-	        }
-	    })
-	    .catch(error => console.error("로그아웃 오류:", error));
-	}
+function showLoginButtons(authButtons) {
+    authButtons.innerHTML = `
+        <button class="btn btn-custom" id="login-btn" onclick="openLoginPage()">로그인</button>
+        <button class="btn btn-custom" id="signup-btn" onclick="location.href='/user/joinPage'">회원가입</button>
+    `;
+}
 
-	function login() {
-	    if (!document.getElementById("userid").value) {
-	        alert("아이디를 입력하세요!");
-	        document.getElementById("userid").focus();
-	        return;
-	    }
-	    if (!document.getElementById("userpwd").value) {
-	        alert("비밀번호를 입력하세요!");
-	        document.getElementById("userpwd").focus();
-	        return;
-	    }
-	    document.getElementById("form-login").submit();
-	}
+function openLoginPage() {
+    window.location.href = "/user/login.html";
+}
 
-	function fetchDustInfo() {
-	    fetch('/api/dustinfo/dustList')
-	    .then(response => response.text())
-	    .then(html => {
-	        document.getElementById("dustinfolist").innerHTML = html;
-	    })
-	    .catch(err => console.error('Error fetching dust info:', err));
-	}
+function logout() {
+    // 로컬 스토리지에서 토큰 제거
+    localStorage.removeItem("jwtToken");
+    location.reload(); // 로그아웃 후 페이지 새로고침
+}
 
-	function fetchInterestInfo() {
-	    fetch('/api/interest/listFavoriteAreas')
-	    .then(response => response.text())
-	    .then(html => {
-	        document.getElementById("fav-list").innerHTML = html;
-	    })
-	    .catch(err => console.error('Error fetching interest info:', err));
-	}
-	</script>
+function login() {
+    const userId = document.getElementById("userid").value;
+    const userPwd = document.getElementById("userpwd").value;
+
+    if (!userId || !userPwd) {
+        alert("아이디와 비밀번호를 입력하세요!");
+        return;
+    }
+
+    fetch("/user/login", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ userId, userPwd })
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.token) {
+            // 로그인 성공 시 JWT 토큰을 로컬 스토리지에 저장
+            localStorage.setItem("jwtToken", data.token);
+            location.reload(); // 로그인 후 페이지 새로고침
+        } else {
+            alert("로그인 실패: " + (data.message || "알 수 없는 오류"));
+        }
+    })
+    .catch(error => console.error("로그인 오류:", error));
+}
+</script>
+
+
 </body>
 </html>
