--- a/home/src/main/resources/static/index.html
+++ b/home/src/main/resources/static/index.html
@@ -127,8 +127,8 @@ document.addEventListener("DOMContentLoaded", function() {
             if (data.authenticated) {
                 console.log("로그인된 상태입니다.");
                 authButtons.innerHTML = `
+                	<button class="btn btn-custom" id="profile-btn" onclick="location.href='/user/infoPage'">프로필</button>
                     <button class="btn btn-custom" id="logout-btn" onclick="logout()">로그아웃</button>
-                    <button class="btn btn-custom" id="profile-btn" onclick="location.href='/user/profile'">프로필</button>
                 `;
             } else {
                 console.log("로그인되지 않은 상태입니다.");
@@ -158,7 +158,7 @@ function openLoginPage() {
 
 function logout() {
     // 로컬 스토리지에서 토큰 제거
-    localStorage.removeItem("jwtToken");
+    localStorage.removeItem("token");
     location.reload(); // 로그아웃 후 페이지 새로고침
 }
 
