--- a/home/src/main/resources/static/user/join.html
+++ b/home/src/main/resources/static/user/join.html
@@ -70,7 +70,7 @@
             };
 
             try {
-                const response = await fetch('/api/user/join', {
+                const response = await fetch('/user/join', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
