--- a/home/src/main/resources/static/user/edit.html
+++ b/home/src/main/resources/static/user/edit.html
@@ -85,17 +85,32 @@ fetch('/user/userinfo', {
 })
 .catch(error => console.error("Error fetching user data:", error));
 
-
-		// 탈퇴 스크립트
-		function deleteMember() {
-			if (confirm("정말 탈퇴하시겠습니까?")) {
-				const form = document.createElement("form");
-				form.method = "POST";
-				form.action = "/user/delete";
-				document.body.appendChild(form);
-				form.submit();
-			}
-		}
 	</script>
+	<script>
+function deleteMember() {
+    if (confirm("정말 탈퇴하시겠습니까?")) {
+        fetch('/user/delete', {
+            method: 'DELETE',
+            headers: {
+                'Authorization': `Bearer ${localStorage.getItem("token")}`
+            }
+        })
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("탈퇴 실패");
+            }
+            alert("계정이 성공적으로 삭제되었습니다.");
+            localStorage.removeItem("token"); // JWT 토큰 제거
+            window.location.href = '/'; // index.html로 이동
+        })
+        .catch(error => {
+            console.error("탈퇴 오류:", error);
+            alert("탈퇴 중 문제가 발생했습니다.");
+        });
+    }
+}
+</script>
+	
+	
 </body>
 </html>
