Feat: Spring - REST 게시판 조회기능 구현

--- a/home/src/main/resources/static/index.html
+++ b/home/src/main/resources/static/index.html
@@ -90,7 +90,7 @@
 	</div>
 
 	<div id="top-right-buttons">
-    	<button class="btn btn-custom info-btn" id="info-btn" onclick="location.href='/board'">게시판</button>
+    	<button class="btn btn-custom info-btn" id="info-btn" onclick="location.href='/board/list.html'">게시판</button>
     	<div id="auth-buttons">
         	<!-- JavaScript에서 인증 상태에 따라 버튼을 동적으로 추가 -->
     	</div>
