--- a/home/src/main/resources/static/board/view.html
+++ b/home/src/main/resources/static/board/view.html
@@ -86,13 +86,20 @@
             // 삭제 버튼 이벤트
             document.getElementById("btn-delete").addEventListener("click", () => {
                 if (confirm("정말로 글을 삭제하시겠습니까?")) {
+                    const token = localStorage.getItem('token');
                     fetch(`/api/board/${articleNo}`, {
                         method: 'DELETE',
+                        headers: {
+                            'Authorization': `Bearer ${token}`
+                        }
                     })
                         .then(response => {
                             if (response.ok) {
                                 alert("글이 삭제되었습니다.");
                                 location.href = "/board/list.html";
+                            } else if (response.status === 401) {
+                                alert("로그인이 필요합니다.");
+                                location.href = "/user/login.html";
                             } else {
                                 throw new Error("글 삭제에 실패했습니다.");
                             }
@@ -115,15 +122,37 @@
             document.getElementById("article-hit").textContent = article.hit;
             document.getElementById("article-content").innerHTML = article.content;
 
+            // 토큰에서 사용자 ID 추출
+            const token = localStorage.getItem('token');
+            let userId = null;
+            if (token) {
+                const decodedToken = parseJwt(token);
+                userId = decodedToken.sub; // JWT의 'sub' 클레임에 사용자 ID가 저장되어 있음
+            }
+
             // 수정 및 삭제 버튼 표시 (로그인한 사용자와 작성자가 동일한 경우)
-            const userId = localStorage.getItem("userId");
             if (userId === article.userId) {
                 document.getElementById("btn-mv-modify").classList.remove("d-none");
                 document.getElementById("btn-delete").classList.remove("d-none");
 
                 document.getElementById("btn-mv-modify").addEventListener("click", () => {
-                    location.href = `/board/mvmodify?articleNo=${article.articleNo}`;
+                    location.href = `/board/mvmodify.html?articleNo=${article.articleNo}`;
                 });
+            }
+        }
+
+        // JWT 토큰을 디코딩하여 페이로드를 추출하는 함수
+        function parseJwt(token) {
+            try {
+                var base64Url = token.split('.')[1];
+                var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                var jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
+                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                }).join(''));
+                return JSON.parse(jsonPayload);
+            } catch (e) {
+                console.error("토큰 파싱 실패:", e);
+                return null;
             }
         }
     </script>
