--- a/home/src/main/resources/static/board/view.html
+++ b/home/src/main/resources/static/board/view.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>글 보기</title>
+    <!-- 부트스트랩 CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 </head>
@@ -42,16 +42,20 @@
                     <div class="divider mt-3 mb-3"></div>
                     <div class="d-flex justify-content-end">
                         <button type="button" id="btn-list" class="btn btn-outline-primary mb-3">글목록</button>
+                        <!-- 로그인한 사용자와 글 작성자가 동일한 경우에만 보이는 버튼들 -->
                         <button type="button" id="btn-mv-modify" class="btn btn-outline-success mb-3 ms-1 d-none">글수정</button>
                         <button type="button" id="btn-delete" class="btn btn-outline-danger mb-3 ms-1 d-none">글삭제</button>
+                        <!-- '초기화' 버튼 제거, '뒤로가기' 버튼 수정 -->
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- JavaScript 및 Bootstrap -->
+    <!-- 부트스트랩 및 JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <!-- Popper.js 및 Bootstrap JS 추가 -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
@@ -97,9 +101,9 @@
                             if (response.ok) {
                                 alert("글이 삭제되었습니다.");
                                 location.href = "/board/list.html";
-                            } else if (response.status === 401) {
-                                alert("로그인이 필요합니다.");
-                                location.href = "/user/login.html";
+                            } else if (response.status === 401 || response.status === 403) {
+                                alert("권한이 없습니다.");
+                                location.href = '/board/list.html';
                             } else {
                                 throw new Error("글 삭제에 실패했습니다.");
                             }
@@ -111,6 +115,11 @@
             // 글 목록으로 이동
             document.getElementById("btn-list").addEventListener("click", () => {
                 location.href = "/board/list.html";
+            });
+
+            // 뒤로가기 버튼 이벤트
+            document.getElementById("btn-back").addEventListener("click", () => {
+                history.back();
             });
         });
 
@@ -127,26 +136,29 @@
             let userId = null;
             if (token) {
                 const decodedToken = parseJwt(token);
-                userId = decodedToken.sub; // JWT의 'sub' 클레임에 사용자 ID가 저장되어 있음
+                if (decodedToken) {
+                    userId = decodedToken.sub; // JWT의 'sub' 클레임에 사용자 ID가 저장되어 있음
+                }
             }
 
-            // 수정 및 삭제 버튼 표시 (로그인한 사용자와 작성자가 동일한 경우)
+            // 로그인한 사용자와 글 작성자가 동일한 경우 버튼 표시
             if (userId === article.userId) {
                 document.getElementById("btn-mv-modify").classList.remove("d-none");
                 document.getElementById("btn-delete").classList.remove("d-none");
 
+                // 글수정 버튼 클릭 시 수정 페이지로 이동
                 document.getElementById("btn-mv-modify").addEventListener("click", () => {
-                    location.href = `/board/mvmodify.html?articleNo=${article.articleNo}`;
+                    location.href = `/board/modify.html?articleNo=${article.articleNo}`;
                 });
             }
         }
 
-        // JWT 토큰을 디코딩하여 페이로드를 추출하는 함수
+        // JWT 토큰 디코딩 함수
         function parseJwt(token) {
             try {
-                var base64Url = token.split('.')[1];
-                var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                var jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
+                const base64Url = token.split('.')[1];
+                const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+                const jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
                     return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
                 }).join(''));
                 return JSON.parse(jsonPayload);
